# free-taiko

./: .gitignore  README.md  free-taiko.cabal
src/: Main.hs
src/Game/Osu/: FreeTaiko.hs
src/Game/Osu/FreeTaiko/: Menu.hs  SongScreen.hs  Types.hs
