name:                free-taiko
version:             0.0.0.0
synopsis:            Free software implementation of osu! taiko mode
description:         Free software implementation of osu! taiko mode
homepage:            https://github.com/Fuuzetsu/free-taiko
license:             GPL-3
license-file:        LICENSE
author:              Mateusz Kowalczyk
maintainer:          fuuzetsu@fuuzetsu.co.uk
copyright:           © Mateusz Kowalczyk, 2014
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable free-taiko
  main-is:             Main.hs
  other-modules:
    Game.Osu.FreeTaiko
    Game.Osu.FreeTaiko.Types
    Game.Osu.FreeTaiko.Menu
  build-depends:
      base >=4 && <5
    , bytestring
    , containers
    , data-default
    , directory
    , filepath
    , free-game
    , lens
    , mtl
    , osz-loader
    , pointedlist
    , system-filepath
    , text
    , time
    , transformers
    , vector
    , zip-archive
  hs-source-dirs:      src
  default-language:    Haskell2010